Avoid rendering bug if title contains too long words

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -970,3 +970,8 @@ pre {
     display: none;
   }
 }
+@media (max-width: 500px) {
+  .intro-header .page-heading h1 {
+    font-size: 2.125rem;
+  }
+}
